feat: setup bootstrap

--- a/src/server/views/home.pug
+++ b/src/server/views/home.pug
@@ -7,7 +7,7 @@ block content
             span#users
         input#username
         input#message
-        button#send-message Enviar
+        button.btn.btn-secondary#send-message Enviar
     div#message-list
 
 block scripts
