--- a/src/server/views/layout.pug
+++ b/src/server/views/layout.pug
@@ -3,9 +3,13 @@ html(lang="es")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        link(rel='stylesheet', href='/css/bootstrap.min.css')
         block extrahead
     body
         block content
         script(src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js")
         script(src="./js/main.js")
+        link(rel='stylesheet', href='/js/jquery.min.js')
+        link(rel='stylesheet', href='/js/popper.js')
+        link(rel='stylesheet', href='/js/bootstrap.min.js')
         block scripts
